--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   Add functionailty to add more buttons to array via a submit button
   -->
   <meta charset="utf-8">
-  <title>Giphy homerk, yo</title>
+  <title>Emotional Support</title>
   <link rel="stylesheet" href="assets\css\custom.css">
     <link rel="stylesheet" href="assets\css\reset.css">
 </head>
@@ -27,8 +27,7 @@
   <!-- Tag to display gifs at -->
   <div id="emotion"></div>
 
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/page.js"></script>
 </body>
 
