--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Button and imput field to add a new search term -->
   <input type="text" id="search">
-  <button id="submit">What are you feeling today</button>
+  <button id="submit">How are you feeling today?</button>
 
   <!-- Tag to display gifs at -->
   <div id="emotion"></div>
