--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 
 
 <head>
-  <!--
-  Add buttons via array in HTML
-  Get those buttons to query Giphy
-  Add gifs to page, along with proper rating
-  Add functionality which starts buttons paused, giving user ability to unpause
-  Add functionailty to add more buttons to array via a submit button
-  -->
+
   <meta charset="utf-8">
   <title>Emotional Support</title>
   <link rel="stylesheet" href="assets\css\custom.css">
@@ -17,14 +11,14 @@
 </head>
 
 <body>
-  <!-- Tag for the array of search terms -->
+  <!-- Buttons go here. -->
   <div id="buttonArray"></div>
 
-  <!-- Button and imput field to add a new search term -->
+  <!-- Submit button goes here. Words go in text field-->
   <input type="text" id="search">
   <button id="submit">How are you feeling today?</button>
 
-  <!-- Tag to display gifs at -->
+  <!-- gifs go here. -->
   <div id="emotion"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -32,3 +26,60 @@
 </body>
 
 </html>
+
+<!--
+                            NN   NNNN
+                           ONN7 NNNN
+                            NNN NNN   NN
+                             NNDNN  NNNNN
+                             NNNN NNNDD
+                              NNNN
+                    DNN?===~~===+?NNNN                      
+           N$N  ONI=~~~~~~~~~~~~~~~~=++INN
+          N+++N8=~~~~~~~~~~~~~~~~~~~=+===+DN
+        N=++N+=~~~~~~~~~~~~~~~~~~~~~=======+NN
+       D=+=N+~~~~~~~~~~~~~~~~~~~~~~========+==N
+     N=++=D=~~~~~~~~~~~~~~~~~~~~~===+=====+$I+7$=N
+    N++++D+=~~~~~~~~~~~~~~~~~~============+N==+==D
+   N++++N++ONNNN~~~~~~~~~~====NNNNN+=+==ZZ=++===+O
+   ?+++N+=D.   ..N========+=N.     .N===+D++++=+==N
+  N++++N+=. .D. .O+========N.  .N   .D===+O7++====+D
+  N++++N++N.    .N=+=++===+N..  .   .N+=+++N+++=====D
+  ?++++N++++?NN8=+N~,:MZ+===NI.   .=N+++=+??+++=====+N
+ $?+???N++++?NNNND:::~==ON===++=??=++++++???N+++====+=8
+  $????N+++N::::~,::~========7ONN=+++++?????N+++======D
+  N?????N+N:::::~,::N===~::::~===8+?????????N+++=======N
+  D????$N~::::::::::::::::::::==N???????????N+++======+=D
+   NNO::::::::::::::::::::::::=N+???????????N++=======+=N
+  N::::::::::::::::::::::::::==8??????????NNN+++=======++N
+87:::::::::::::::::::::::::::=D???????NNNII7N++=======++=N
+N:::::::::::::::::::::::::::~=DNNNNOIIIIIIIIN+++==+==++++D
+,:::::::::::::::::::::::::::==NIIIIIIIIIIII7I??+++=++++++8
+7:::::::::::::::::::::::::::==NIIIIIIIIIIII$I??+?++++++++D
+N::::::::::::::::::::::::::==D???????????II8???????+++???N
+ DZ=:::::::::::::::::::::===NO????????????IIN????????????
+   NO===~:::::::::::~~====ON???????????????II???????????N
+      NN8============$NNN==+++????????????????????????N
+       N~~~7DDD877?=============????????????????????NN
+      N~~~~~~~~~~=~~~~============+????????????????I8
+      N~~~~~~~~~~~~~~~~================+????????????N
+     N~~~~~~~~~~~~~~~~~~=================++?????????N     N
+     N=~~~~~~~~~~~~~~~~~~=================+?????????I  MN++D
+    8?~~~~~~~~~~~~~~~~~~~~===============+++????????INZ?++N
+    N~~~~~~~~~~~~~~~~~~~~~==============+++?????????I$???+N
+    D=~~~~~~~~~~~~~~~~~~~===============+++?????????8????N
+    N====~~~~~~~~~~~~~~================+++??????????NI??$
+    Z?+=======~~~~~~~================++++???????????D???8
+     N?+++++=======================++++++??????????$$?I8
+     N???+++++++++=++==========+++++++?????????????D?N
+      N??????+++++++++=+++++++++++????????????????N?N
+       N???????????++++?++++?????????????????????NN
+        N???????????????????????????????????????N
+          N???????????????????????????????????N
+         NNNNI??????????????????????????????NN
+      NN::~~===DNDZ????????????????????NNN$+++N
+    N7~==~::::::~=+++$NNNNNNNNDNNNNN++==~:::::~O
+         D=,:~===~~~~N          N~:::::::::===+=D
+           NN   7NN=D          N:==NNN8=::DD
+                               7
+                                             GlassGiant.com -->
